# ZeroDiffusion

./: .gitignore  LICENSE  README.md  embedding_visualisation.py  pyproject.toml  requirements.txt  run.sh  run_ddpm.sh  setup.py  train.py  train_ddpm.py  train_denoise.py  train_diffusion.py
audio_embeddings/: EarlyStopping.py  README.md  inference.py  setup.py  train.py
audio_embeddings/dataset/: dataset.py  dataset_utils.py
audio_embeddings/models/: VGGish.py
data/: README.md  load_esc50.py  load_fsc22.py  word2vec.py
dataloader/: diffusion.py  esc50.py
models/: classifier.py  dae.py  ddpm.py  denoise.py  diffusion.py  warp.py
results/: escfold0.txt  escfold1.txt  escfold2.txt  escfold3.txt  esctest.txt  fscval.txt  gtzan.txt  urbansound8k.txt
results/ddpm/: arcafold0.txt  arcafold1.txt  arcafold2.txt  arcafold3.txt  arcafold4.txt  arcafold5.txt  arcatest.txt  escfold0.txt  escfold1.txt  escfold2.txt  escfold3.txt  esctest.txt  fsctest.txt  fscval.txt  gtzan.txt  tau2019.txt  urbansound8k.txt
results/denoise/: arcafold0.txt  arcafold1.txt  arcafold2.txt  arcafold3.txt  arcafold4.txt  arcafold5.txt  arcatest.txt  escfold0.txt  escfold1.txt  escfold2.txt  escfold3.txt  esctest.txt  fsctest.txt  fscval.txt  gtzan.txt  tau2019.txt  urbansound8k.txt
