[project]
name = "zerodiffusion"
version = "0.1.0"
description = "Zero-shot learning with an interpolation-based denoising autoencoder"
requires-python = ">=3.11"
dependencies = [
  "gensim==4.4.0",
  "matplotlib==3.10.9",
  "numpy==2.4.4",
  "resampy==0.4.3",
  "scipy==1.17.1",
  "soundfile==0.13.1",
  "torch==2.11.0",
]

[tool.uv]
package = false
